# UFPB

./: README.md
APA/: README.md
APA/Projeto Final/: tsp.c
AVA/Atividade-1/: Inputq1.txt  Inputq2.txt  Inputq3a.txt  Inputq3b.txt  atividade-1.Rmd
AVA/primeiro-seminario/: Primeiro-Seminario.R
CTRL/: Prova 3 - Controle.ipynb
IA/Projeto/: Projeto Inteligencia Artificial.ipynb
IAC/: CalculadoraMedia.asm  MaiorNumero.asm  coding.asm
ICG/: README.md
ICG/Atividade 1/: README.md
ICG/Atividade 2/: README.md  main.h  mygl.c  mygl.h
ICG/Atividade 3/: README.md  main.cpp  transform_gl
IME/ADDACC/: Anotações_comentadas.txt  Makefile  (+29 more)
IP/: q4.c  q5.c  q6.c  q7.c  q8.c  q9.c
ITI/: Projeto-Final-ITI.ipynb  Trabalho-Final-Parte-2-ITI.ipynb  decoder_lzw.py  encoder_lzw (1).py  encoder_lzw.py
LP1/projeto/: Amarelo.cpp  Amarelo.h  Azul.cpp  Azul.h  Branco.cpp  Branco.h  CMakeLists.txt  Cor.cpp  Cor.h  Jogo.cpp  Jogo.h  Pontuacao.cpp  Pontuacao.h  Preto.cpp  Preto.h  Verde.cpp  Verde.h  Vermelho.cpp  Vermelho.h  main.cpp
LP1/roteiro7/questao3/: CMakeLists.txt  Cirurgiao.cpp  Cirurgiao.h  Ginecologista.cpp  Ginecologista.h  Medico.cpp  Medico.h  Oftamologista.cpp  Oftamologista.h  Otorrino.cpp  Otorrino.h  main.cpp
LP1/roteiro7/questao4/: CMakeLists.txt  Trabalhador.cpp  Trabalhador.h  TrabalhadorAssalariado.cpp  TrabalhadorAssalariado.h  TrabalhadorPorHora.cpp  TrabalhadorPorHora.h  main.cpp
LP1/roteiro8/questao3/: Assalariado.cpp  Assalariado.h  CMakeLists.txt  Comissionado.cpp  Comissionado.h  Funcionario.cpp  Funcionario.h  FuncionarioNaoExisteException.cpp  FuncionarioNaoExisteException.h  Horista.cpp  Horista.h  OrcamentoEstouradoException.cpp  OrcamentoEstouradoException.h  SistemaGerenciaFolha.cpp  SistemaGerenciaFolha.h  main.cpp
SSD/: Projeto_SSD_Epitacio.ipynb  README.md
(+220 files in other folders)
